--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -68,8 +68,8 @@
                                 <h3>Top 10 phone applications and 2017 mobile design awards</h3>
 
                                 <div class="blog-meta big-meta">
-                                    <small><a href="tech-single.html" title="">21 July, 2017</a></small>
-                                    <small><a href="tech-author.html" title="">by Jessica</a></small>
+                                    <small><a href="/single" title="">21 July, 2017</a></small>
+                                    <small><a href="/author" title="">by Jessica</a></small>
                                     <small><a href="#" title=""><i class="fa fa-eye"></i> 2344</a></small>
                                 </div><!-- end meta -->
 
@@ -165,7 +165,7 @@
                                     <div class="col-lg-6">
                                         <div class="blog-list-widget">
                                             <div class="list-group">
-                                                <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                                <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                                     <div class="w-100 justify-content-between text-right">
                                                         <img src="upload/tech_menu_19.jpg" alt="" class="img-fluid float-right">
                                                         <h5 class="mb-1">5 Beautiful buildings you need to before dying</h5>
@@ -179,7 +179,7 @@
                                     <div class="col-lg-6">
                                         <div class="blog-list-widget">
                                             <div class="list-group">
-                                                <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                                <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                                     <div class="w-100 justify-content-between">
                                                         <img src="upload/tech_menu_20.jpg" alt="" class="img-fluid float-left">
                                                         <h5 class="mb-1">Let's make an introduction to the glorious world of history</h5>
@@ -226,7 +226,7 @@
                                     <div class="col-lg-6">
                                         <div class="blog-box">
                                             <div class="post-media">
-                                                <a href="tech-single.html" title="">
+                                                <a href="/single" title="">
                                                     <img src="upload/tech_menu_04.jpg" alt="" class="img-fluid">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
@@ -234,7 +234,7 @@
                                                 </a>
                                             </div><!-- end media -->
                                             <div class="blog-meta">
-                                                <h4><a href="tech-single.html" title="">We are guests of ABC Design Studio</a></h4>
+                                                <h4><a href="/single" title="">We are guests of ABC Design Studio</a></h4>
                                                 <small><a href="blog-category-01.html" title="">Trends</a></small>
                                                 <small><a href="blog-category-01.html" title="">21 July, 2017</a></small>
                                             </div><!-- end meta -->
@@ -244,7 +244,7 @@
                                     <div class="col-lg-6">
                                         <div class="blog-box">
                                             <div class="post-media">
-                                                <a href="tech-single.html" title="">
+                                                <a href="/single" title="">
                                                     <img src="upload/tech_menu_06.jpg" alt="" class="img-fluid">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
@@ -252,7 +252,7 @@
                                                 </a>
                                             </div><!-- end media -->
                                             <div class="blog-meta">
-                                                <h4><a href="tech-single.html" title="">Nostalgia at work with family</a></h4>
+                                                <h4><a href="/single" title="">Nostalgia at work with family</a></h4>
                                                 <small><a href="blog-category-01.html" title="">News</a></small>
                                                 <small><a href="blog-category-01.html" title="">20 July, 2017</a></small>
                                             </div><!-- end meta -->
@@ -342,7 +342,7 @@
                                 <div class="trend-videos">
                                     <div class="blog-box">
                                         <div class="post-media">
-                                            <a href="tech-single.html" title="">
+                                            <a href="/single" title="">
                                                 <img src="upload/tech_video_01.jpg" alt="" class="img-fluid">
                                                 <div class="hovereffect">
                                                     <span class="videohover"></span>
@@ -350,7 +350,7 @@
                                             </a>
                                         </div><!-- end media -->
                                         <div class="blog-meta">
-                                            <h4><a href="tech-single.html" title="">We prepared the best 10 laptop presentations for you</a></h4>
+                                            <h4><a href="/single" title="">We prepared the best 10 laptop presentations for you</a></h4>
                                         </div><!-- end meta -->
                                     </div><!-- end blog-box -->
 
@@ -358,7 +358,7 @@
 
                                     <div class="blog-box">
                                         <div class="post-media">
-                                            <a href="tech-single.html" title="">
+                                            <a href="/single" title="">
                                                 <img src="upload/tech_video_02.jpg" alt="" class="img-fluid">
                                                 <div class="hovereffect">
                                                     <span class="videohover"></span>
@@ -366,7 +366,7 @@
                                             </a>
                                         </div><!-- end media -->
                                         <div class="blog-meta">
-                                            <h4><a href="tech-single.html" title="">We are guests of ABC Design Studio - Vlog</a></h4>
+                                            <h4><a href="/single" title="">We are guests of ABC Design Studio - Vlog</a></h4>
                                         </div><!-- end meta -->
                                     </div><!-- end blog-box -->
 
@@ -374,7 +374,7 @@
 
                                     <div class="blog-box">
                                         <div class="post-media">
-                                            <a href="tech-single.html" title="">
+                                            <a href="/single" title="">
                                                 <img src="upload/tech_video_03.jpg" alt="" class="img-fluid">
                                                 <div class="hovereffect">
                                                     <span class="videohover"></span>
@@ -382,7 +382,7 @@
                                             </a>
                                         </div><!-- end media -->
                                         <div class="blog-meta">
-                                            <h4><a href="tech-single.html" title="">Both blood pressure monitor and intelligent clock</a></h4>
+                                            <h4><a href="/single" title="">Both blood pressure monitor and intelligent clock</a></h4>
                                         </div><!-- end meta -->
                                     </div><!-- end blog-box -->
                                 </div><!-- end videos -->
@@ -392,7 +392,7 @@
                                 <h2 class="widget-title">Popular Posts</h2>
                                 <div class="blog-list-widget">
                                     <div class="list-group">
-                                        <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
                                                 <img src="upload/tech_blog_08.jpg" alt="" class="img-fluid float-left">
                                                 <h5 class="mb-1">5 Beautiful buildings you need..</h5>
@@ -400,7 +400,7 @@
                                             </div>
                                         </a>
 
-                                        <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
                                                 <img src="upload/tech_blog_01.jpg" alt="" class="img-fluid float-left">
                                                 <h5 class="mb-1">Let's make an introduction for..</h5>
@@ -408,7 +408,7 @@
                                             </div>
                                         </a>
 
-                                        <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 last-item justify-content-between">
                                                 <img src="upload/tech_blog_03.jpg" alt="" class="img-fluid float-left">
                                                 <h5 class="mb-1">Did you see the most beautiful..</h5>
@@ -423,7 +423,7 @@
                                 <h2 class="widget-title">Recent Reviews</h2>
                                 <div class="blog-list-widget">
                                     <div class="list-group">
-                                        <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
                                                 <img src="upload/tech_blog_02.jpg" alt="" class="img-fluid float-left">
                                                 <h5 class="mb-1">Banana-chip chocolate cake recipe..</h5>
@@ -437,7 +437,7 @@
                                             </div>
                                         </a>
 
-                                        <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 justify-content-between">
                                                 <img src="upload/tech_blog_03.jpg" alt="" class="img-fluid float-left">
                                                 <h5 class="mb-1">10 practical ways to choose organic..</h5>
@@ -451,7 +451,7 @@
                                             </div>
                                         </a>
 
-                                        <a href="tech-single.html" class="list-group-item list-group-item-action flex-column align-items-start">
+                                        <a href="/single" class="list-group-item list-group-item-action flex-column align-items-start">
                                             <div class="w-100 last-item justify-content-between">
                                                 <img src="upload/tech_blog_07.jpg" alt="" class="img-fluid float-left">
                                                 <h5 class="mb-1">We are making homemade ravioli..</h5>
