--- a/views/Partials/_footer.ejs
+++ b/views/Partials/_footer.ejs
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <div class="copyright">&copy; Tech Blog. Design: <a href="http:latrosoft.in">Latrosoft,Inc</a>.</div>
+                <div class="copyright">&copy; Tech Blog. Design: <a href="https://latrosoft.in/">Latrosoft,Inc</a>.</div>
             </div>
         </div>
     </div><!-- end container -->
