--- a/views/tech-category-03.ejs
+++ b/views/tech-category-03.ejs
@@ -78,19 +78,19 @@
                                     
                                     <div class="col-md-4">
                                         <div class="post-media">
-                                            <a href="/single?id=<%=reviews[i].id%>" title="">
-                                                <img src="<%=reviews[i].banner%>" alt="" class="img-fluid">
+                                            <a href="/single?id=<%=data[i].id%>" title="">
+                                                <img src="<%=data[i].banner%>" alt="" class="img-fluid">
                                                 <div class="hovereffect"></div>
                                             </a>
                                         </div><!-- end media -->
                                     </div><!-- end col -->
 
                                     <div class="blog-meta big-meta col-md-8">
-                                        <h4><a href="/single" title=""><%=reviews[i].title%></p>
-                                        <small class="firstsmall"><a class="bg-orange" href="/reviews" title=""><%=reviews[i].tag%></a></small>
-                                        <small><a href="/single" title=""><%=reviews[i].date%></a></small>
-                                        <small><a href="/author" title="">By <%=reviews[i].by%></a></small>
-                                        <small><a href="/single" title=""><i class="fa fa-eye"></i> <%=reviews[i].views%></a></small>
+                                        <h4><a href="/single" title=""><%=data[i].title%></p>
+                                        <small class="firstsmall"><a class="bg-orange" href="/reviews" title=""><%=data[i].tag%></a></small>
+                                        <small><a href="/single" title=""><%=data[i].date%></a></small>
+                                        <small><a href="/author" title="">By <%=data[i].by%></a></small>
+                                        <small><a href="/single" title=""><i class="fa fa-eye"></i> <%=data[i].views%></a></small>
                                     </div><!-- end meta -->
                                 </div><!-- end blog-box -->
 
