Header And Footer

--- a/views/Partials/_footer.ejs
+++ b/views/Partials/_footer.ejs
@@ -31,11 +31,11 @@
                     <h2 class="widget-title">Popular Categories</h2>
                     <div class="link-widget">
                         <ul>
-                            <li><a href="#">Hacking </a></li>
-                            <li><a href="#">Technology</a></li>
                             <li><a href="#">Science</a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#">Blogging <span>(66)</span></a></li>
+                            <li><a href="#">Technology</a></li>
+                            <li><a href="#">Reviews</a></li>
+                            <li><a href="#">Hacking </a></li>
+                            <li><a href="#">Blogging <span></span></a></li>
                         </ul>
                     </div><!-- end link-widget -->
                 </div><!-- end widget -->
