--- a/views/index.ejs
+++ b/views/index.ejs
@@ -205,7 +205,7 @@
                                     </ul>
                                 </nav>
                             </div><!-- end col -->
-                        <!-- </div>end row --> -->
+                        <!-- </div>end row --> 
                     </div><!-- end col -->
 
                     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
