--- a/views/Partials/_navbar.ejs
+++ b/views/Partials/_navbar.ejs
@@ -145,13 +145,13 @@
                 </ul>
                 <ul class="navbar-nav mr-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-rss"></i></a>
+                        <a class="nav-link" href="https://www.facebook.com/latrosoft"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-android"></i></a>
+                        <a class="nav-link" href="https://twitter.com/Latrosoft"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-apple"></i></a>
+                        <a class="nav-link" href="https://www.instagram.com/latrosoft/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                     </li>
                 </ul>
             </div>
